@@ -11,13 +11,8 @@
  *       January 2003
  */
 
-#ifdef __GNUC__
-/* Validate in case of UNIX */
+#ifndef WIN32
 #define UNIX 1
-#else
-/* Validate if SHIFT JIS is used for a filename */
-/* Win32 MSVC is assumed */
-#define SHIFT_JIS 1
 #endif
 
 /*     %%% Contents of an extended DVI file  %%%
@@ -103,15 +98,12 @@
 #define Long  int
 
 #ifdef UNIX
-#define PATH_SEP     '/'
 #define READ_TEXT    "r"
 #define READ_BINARY  "r"
 #define WRITE_BINARY "w"
 #define WRITE_TEXT   "w"
 #define StrCmp strcmp
 #else
-#define PATH_SEP     '\\'
-#define PATH_SEPU    '/'
 #define READ_TEXT    "rt"
 #define READ_BINARY  "rb"
 #define WRITE_BINARY "wb"
