@@ -1,3 +1,10 @@
+2023-08-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvispc.c, chkdvifont.c, dd.h, msvcdir.h, Makefile.am:
+	Enable to build with MinGW & MSYS2 on Windows.
+	* dvispc.test, chkdvifont.test:
+	Enable to test on Windows.
+
 2022-08-30  Karl Berry  <karl@freefriends.org>
 
 	* chkdvifont.man: typo fixes from Hilmar Preu\ss{}e,
